clusters/sirius/apps/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: sonarr
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ""
  labels:
    external-dns-exclude: "true"
spec:
  rules:
  - host: sonarr.moonblade.work
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr
            port:
              number: 8989
